objects/MaskField__c.object
<CustomObject>
    <fields>
        <fullName>MaskObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MaskObject</label>
        <referenceTo>MaskObject__c</referenceTo>
        <relationshipLabel>MaskFields</relationshipLabel>
        <relationshipName>MaskFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mask_values__c</fullName>
        <label>Mask values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>is_concatenate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is concatenate?</label>
        <type>Checkbox</type>
    </fields>
    <label>MaskField</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MaskFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>